<package>
  <name>dynamixel_mx_64</name>
  <version>0.4.1</version>
  <description>
    Example configuration and launch file for dynamixel_motor stack.
  </description>
  <maintainer email="lschai@student.ethz.ch">Leonard Schai</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/dynamixel_driver</url>

  <author>Leonard Schai</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>dynamixel_controllers</run_depend>

  <export>

  </export>
</package>
